# dydx-trader

./: .env.example  .gitignore  CREDENTIALS.md  INSTRUCTION_UPDATE_SUMMARY.md  INTEGRATION_COVERAGE_SUCCESS.md  LAYER2_COMPLETION_REPORT.md  LAYER2_COMPLETION_SUMMARY.md  LAYER2_DASHBOARD_E2E_COMPLETION_REPORT.md  LAYER3_COMPLETION_REPORT.md  LAYER3_DASHBOARD_E2E_COMPLETION_REPORT.md  LAYER3_PROCESSING_METRICS_PANEL_COMPLETION_REPORT.md  LAYER4_ARCHITECTURE_DECISION.md  LAYER4_COMPLETION_REPORT.md  LAYER4_REWRITE_PLAN.md  PROGRESS.md  README.md  btc_orderbook_dashboard.py  demo_enhanced_dashboard.py  enhanced_dashboard_demo.py  layer2_dydx_callbacks.py  layer2_dydx_callbacks_testnet.py  layer2_dydx_stream.py  layer2_stream_recorder.py  layer5_continuous_demo.py  layer5_demo.py  layer5_smooth_demo.py  layer5_streaming_demo.py  live_trader.py  negative_spreads_dashboard.py  pyproject.toml  reactive_spreads_dashboard.py  reactive_trades_dashboard.py  requirements.txt  run_beautiful_signals_dashboard.py  run_compact_signals_dashboard.py  run_dashboard_async.py  run_dashboard_demo.py  run_enhanced_dashboard.py  run_live_trader.py  run_signals_dashboard.py  (+12 more)
.github/instructions/: ARCHITECTURE.instructions.md  CHAOS_PREVENTION_METHODOLOGY.instructions.md  COMPLETE_GUIDE.instructions.md  ESSENTIAL.instructions.md  ITERATION_TRACKING.instructions.md  LAYER3_DATA_PROCESSING.instructions.md  METHODOLOGY_OWNERSHIP.instructions.md  NO_CHAOS_RULE.instructions.md  PROJECT_CONTEXT.instructions.md  REACTIVE_PROGRAMMING_METHODOLOGY.instructions.md  RXPY_MIGRATION.instructions.md  TESTING.instructions.md  UNIVERSAL_INCENTIVE_METHODOLOGY.instructions.md  UNIVERSAL_RICH_E2E_TESTING_METHODOLOGY.instructions.md  UNIVERSAL_TDD_METHODOLOGY.instructions.md  data_sources.instructions.md  development_workflow.instructions.md  implementation_roadmap.instructions.md  paper_trading.instructions.md  performance_optimization.instructions.md  project_overview.instructions.md  risk_management.instructions.md  tdd_practices.instructions.md  technical_architecture.instructions.md  terminal_dashboard.instructions.md  testing_strategy.instructions.md  trading_strategies.instructions.md
dashboards/: mean_reversion_dashboard.py  momentum_breakout_dashboard.py  objective_market_quality_dashboard.py  realistic_mean_reversion_callbacks_dashboard.py  realistic_mean_reversion_callbacks_testnet_dashboard.py  realistic_mean_reversion_dashboard.py  scalping_momentum_callbacks_dashboard.py  scalping_momentum_dashboard.py  six_markets_orderbook_dashboard.py  sniper_signal_tracking_dashboard.py
requirements/: development.txt  production.txt
src/dydx_bot/: __init__.py  main.py
src/dydx_bot/config/: __init__.py  settings.py
src/dydx_bot/connection/: __init__.py  capabilities.py  client.py  dydx_client.py  manager.py
src/dydx_bot/dashboard/: __init__.py  layer2_dashboard.py  layer4_dashboard.py  layer5_multi_market_dashboard.py  signals_dashboard.py
src/dydx_bot/dashboard/panels/: __init__.py  layer5_multi_market_panel.py
src/dydx_bot/dashboard/panels/layer3/: __init__.py  connection_status_panel.py  market_data_panel.py  processing_metrics_panel.py
src/dydx_bot/dashboard/panels/layer4/: __init__.py
src/dydx_bot/data/: __init__.py  processor.py  types.py
src/dydx_bot/signals/: connection_manager.py  engine.py  manager.py  types.py
src/dydx_bot/strategies/: __init__.py  engine.py  types.py
tests/: conftest.py
tests/e2e/: __init__.py  test_dashboard_backend_functionality.py  test_layer2_dashboard_e2e.py  test_layer4_e2e.py  test_layer5_multi_market_dashboard_real_e2e.py  test_real_dydx_connection.py  test_signals_dashboard_e2e.py
tests/e2e/panels/layer3/: __init__.py  test_connection_status_panel_e2e.py  test_market_data_panel_e2e.py  test_processing_metrics_panel_e2e.py
tests/e2e/panels/layer4/: __init__.py
tests/integration/: test_dydx_integration.py  test_dydx_integration_enhanced.py  test_layer3_integration.py  test_layer4_integration.py  test_layer5_integration_fixed.py  test_main_module_comprehensive.py
tests/streaming/: test_real_streaming_data.py
tests/unit/: test_config.py  test_connection_capabilities.py  test_data_processor.py  test_dydx_client.py  test_dydx_client_enhanced.py  test_layer4_dashboard_tdd.py  test_layer4_tdd.py  test_layer5_strategy_engine.py  test_layer5_strategy_types.py  test_main.py
tests/unit/models/: __init__.py  test_market.py
